@@ -11,6 +11,7 @@ import in.dragonbra.javasteam.util.stream.SeekOrigin;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * Represents a struct backed client message.
@@ -43,8 +44,11 @@ public class ClientMsg<BodyType extends ISteamSerializableMessage> extends MsgBa
         super(ExtendedClientMsgHdr.class, payloadReserve);
 
         try {
-            body = bodyType.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            body = bodyType.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException |
+                 InstantiationException |
+                 IllegalAccessException |
+                 InvocationTargetException e) {
             logger.debug(e);
         }
 
