@@ -11,6 +11,7 @@ import in.dragonbra.javasteam.util.stream.SeekOrigin;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * Represents a struct backed message without session or client info.
@@ -41,8 +42,11 @@ public class Msg<BodyType extends ISteamSerializableMessage> extends MsgBase<Msg
         super(MsgHdr.class, payloadReserve);
 
         try {
-            body = bodyType.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            body = bodyType.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException |
+                 InstantiationException |
+                 IllegalAccessException |
+                 InvocationTargetException e) {
             logger.debug(e);
         }
 
