@@ -13,6 +13,7 @@ import java.util.regex.Pattern;
 /**
  * This 64-bit structure is used for identifying various objects on the Steam network.
  */
+@SuppressWarnings("unused")
 public class SteamID {
 
     private final BitVector64 steamID;
@@ -24,20 +25,19 @@ public class SteamID {
     private static final Map<EAccountType, Character> ACCOUNT_TYPE_CHARS;
 
     static {
-        Map<EAccountType, Character> accountTypeChars = new HashMap<>();
 
-        accountTypeChars.put(EAccountType.AnonGameServer, 'A');
-        accountTypeChars.put(EAccountType.GameServer, 'G');
-        accountTypeChars.put(EAccountType.Multiseat, 'M');
-        accountTypeChars.put(EAccountType.Pending, 'P');
-        accountTypeChars.put(EAccountType.ContentServer, 'C');
-        accountTypeChars.put(EAccountType.Clan, 'g');
-        accountTypeChars.put(EAccountType.Chat, 'T'); // Lobby chat is 'L', Clan chat is 'c'
-        accountTypeChars.put(EAccountType.Invalid, 'I');
-        accountTypeChars.put(EAccountType.Individual, 'U');
-        accountTypeChars.put(EAccountType.AnonUser, 'a');
-
-        ACCOUNT_TYPE_CHARS = Collections.unmodifiableMap(accountTypeChars);
+        ACCOUNT_TYPE_CHARS = Map.of(
+                EAccountType.AnonGameServer, 'A',
+                EAccountType.GameServer, 'G',
+                EAccountType.Multiseat, 'M',
+                EAccountType.Pending, 'P',
+                EAccountType.ContentServer, 'C',
+                EAccountType.Clan, 'g',
+                EAccountType.Chat, 'T', // Lobby chat is 'L', Clan chat is 'c'
+                EAccountType.Invalid, 'I',
+                EAccountType.Individual, 'U',
+                EAccountType.AnonUser, 'a'
+        );
     }
 
     public static final char UNKNOWN_ACCOUNT_TYPE_CHAR = 'i';
